syntax = "proto3";

package user.v1;
option go_package = "apiuser/api/user/v1;v1";

import "google/api/annotations.proto";
import "api/apiuser/api/user/v1/user.proto";

// The greeting service definition.
service ApiUser {
  rpc Register (RegisterRequest) returns (RegisterReply){
    option (google.api.http) = {
      post: "/auth/device/register"
      body: "*"
    };
  }

  rpc Auth (AuthRequest) returns (AuthReply){
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  };
}